<resources>
    <string name="app_name">My News</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="parameters">Parameters</string>
    <string name="image_of_article">Image of article</string>
    <string name="search_query_term">Search query term</string>
    <string name="begin_date">Begin Date</string>
    <string name="end_date">End Date</string>
    <string name="arts">Arts</string>
    <string name="politics">Politics</string>
    <string name="business">Business</string>
    <string name="sports">Sports</string>
    <string name="entrepreneurs">Entrepreneurs</string>
    <string name="travel">Travel</string>
    <string name="notification">Notification</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="switch_text">Enable notifications (one per day)</string>
    <string name="clear">CLEAR</string>
</resources>
