<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    android:id="@+id/notifActivity_Layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="25dp">

 <include layout="@layout/toolbar"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:id="@+id/toolbarNotif"/>

    <EditText
        android:id="@+id/editTextSearchQueryNotif"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/toolbarNotif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="LabelFor" />

    <CheckBox
        android:id="@+id/checkBoxNotifArts"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/arts"
        app:layout_constraintWidth_percent="0.45"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextSearchQueryNotif" />

    <CheckBox
        android:id="@+id/checkBoxNotifPolitics"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/politics"
        app:layout_constraintTop_toBottomOf="@+id/editTextSearchQueryNotif"
        app:layout_constraintWidth_percent="0.45"
        app:layout_constraintLeft_toRightOf="@id/checkBoxNotifArts"/>

    <CheckBox
        android:id="@+id/checkBoxNotifBusiness"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/business"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxNotifPolitics"
        app:layout_constraintWidth_percent="0.45" />

    <CheckBox
        android:id="@+id/checkBoxNotifSports"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/sports"
        app:layout_constraintLeft_toRightOf="@id/checkBoxNotifBusiness"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxNotifPolitics"
        app:layout_constraintWidth_percent="0.45" />

    <CheckBox
        android:id="@+id/checkBoxNotifEntrepreneurs"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/entrepreneurs"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxNotifBusiness"
        app:layout_constraintWidth_percent="0.45" />

    <CheckBox
        android:id="@+id/checkBoxNotifTravel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/travel"
        app:layout_constraintStart_toEndOf="@+id/checkBoxNotifEntrepreneurs"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxNotifSports"
        app:layout_constraintWidth_percent="0.45" />

    <View
        android:id="@+id/separator"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxNotifTravel" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:switchMinWidth="50dp"
        android:text="@string/switch_text"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/separator" />
   <Button
       android:id="@+id/clear_button_notification"
       android:layout_width="130dp"
       android:layout_height="wrap_content"
       android:layout_marginEnd="8dp"
       android:layout_marginStart="8dp"
       android:layout_marginTop="24dp"
       android:text="@string/clear"
       android:backgroundTint="@color/colorPrimary"
       android:textColor="@android:color/white"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/switch1" />
</android.support.constraint.ConstraintLayout>